.metadata/.plugins/org.eclipse.cdt.ui/reconstruct.build.log
23:44:57 **** Incremental Build of configuration Debug for project reconstruct ****
make all 
Building file: ../recon.cpp
Invoking: Cross G++ Compiler
g++ -I/usr/local/include -I/usr/local/include/opencv -I/home/diego/softwares/eigen3.3 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"recon.d" -MT"recon.o" -o "recon.o" "../recon.cpp"
../recon.cpp: In function ‘int main(int, char**)’:
../recon.cpp:67:81: error: ‘reconstruct’ was not declared in this scope
   reconstruct(images_paths, Rs_est, ts_est, K, points3d_estimated, is_projective);
                                                                                 ^
../recon.cpp:85:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i = 0; i < points3d_estimated.size(); ++i)
                     ^
subdir.mk:18: recipe for target 'recon.o' failed
make: *** [recon.o] Error 1

23:44:58 Build Finished (took 1s.456ms)

